# qmlcheckers

./: .gitignore  CMakeLists.txt  qmlcheckers.qbs
client/: CMakeLists.txt  client.qbs  main.cpp  qml.qrc  resources.qrc  settings.js
client/qml/logic/: Chatter.qml  ChessModel.qml  Client.qml  Loginer.qml  Player.qml
client/qml/view/: Board.qml  CellDelegate.qml  Chat.qml  GameScreen.qml  LoginPage.qml  UserdataBlock.qml  main.qml
server/: CMakeLists.txt  checkersgame.cpp  checkersgame.h  chessboard.cpp  chessboard.h  loginmanager.cpp  main.cpp  room.cpp  room.h  server.cpp  server.h  server.qbs
server/include/: checkersgame.h  loginmanager.h  room.h  server.h  userdatamanager.h
server/src/: checkersgame.cpp  loginmanager.cpp  room.cpp  server.cpp  userdatamanager.cpp
shared/: CMakeLists.txt  shared.qbs  types.h
shared/card/: abstractCard.cpp  abstractCard.h  card.cpp  card.h  deck.cpp  deck.h
shared/chat/: conferencemessage.cpp  conferencemessage.h  message.cpp  message.h  personalmessage.cpp  personalmessage.h  publicinfo.cpp
shared/checkers/: cell.cpp  cell.h  chessboard.cpp  chessboard.h  move.cpp  move.h
shared/checkers/ai/: bot.cpp  bot.h  move.cpp  move.h  situation.cpp  situation.h
